# django-vanityurls

./: Makefile  README.md  pylintrc  pyproject.toml  requirements_build.txt  requirements_dev.txt
docs/source/: conf.py  index.rst
tests/: test_middleware.py  test_settings.py  tests_models.py
vanityurls/: admin.py  apps.py  middleware.py  models.py
vanityurls/fixtures/: basic-db.json
vanityurls/migrations/: 0001_initial.py  0002_alter_vanityurl_options_alter_vanityurl_vanity_url.py  0003_vanityurl_code_alter_vanityurl_vanity_url.py  0004_category_vanityurl_category.py
