[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[project]
name = "django-vanityurls"
version = "1.1"
authors = [
  { name="Simon Harding", email="djvanity@pointbeing.net" },
]
description = "A Django vanityurls app"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "django>=5.0.6",
]

[project.urls]
Documentation = "https://django-vanityurls.readthedocs.io/"
Homepage = "https://github.com/simonharris/django-vanityurls"
Issues = "https://github.com/simonharris/django-vanityurls/issues"
Source = "https://github.com/simonharris/django-vanityurls"

[tool.hatch.build.targets.wheel]
packages = ["vanityurls"]
